<resources>

    <string name="app_name">Timer_Frag</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="text_time">0:04:25</string>
    <string name="text_time_set">0:04:25</string>
    <string name="text_count_set">1 of 4</string>
    <string name="text_count_rep">1 of 4</string>
    <string name="text_new_timer">New Timer</string>
    <string name="text_no_items">No Items</string>
    <string name="text_button_sound_on_off">Sound On or Off</string>
    <string name="text_button_start">Start Button</string>
    <string name="text_button_pause">Pause Button</string>
    <string name="text_button_reset">Reset Button</string>
    <string name="text_run_clock_logo">Run Clock logo</string>
    <string name="text_run_extra_logo">Run Extra logo</string>
    <string name="text_edit_clock_logo">Edit Clock logo</string>
    <string name="text_edit_extra_logo">Edit Extra logo</string>
    <string name="text_timer_list_logo">Timer List logo</string>
    <string name="text_app_options_logo">App Options logo</string>
    <string name="label_hour">hr</string>
    <string name="label_minute">min</string>
    <string name="label_second">sec</string>
    <string name="label_set">set</string>
    <string name="label_rep">rep</string>
    <string name="label_rest_btwn">Rest Btwn:</string>
    <string name="label_weight">Weight:</string>
    <string name="label_seat">Seat Adj:</string>
    <string name="label_notes">Notes:</string>
    <string name="label_orientation">Orientation:</string>
    <string name="label_finish_sound">Finish Sound:</string>
    <string name="label_rest_sound">Rest Sound:</string>
    <string name="label_copy_timer">Copy Timer:</string>
    <string name="hint_timer_name">Timer Name</string>
    <string name="hint_no_weight">weight</string>
    <string name="hint_no_seat">seat #</string>
    <string name="hint_no_notes">no notes</string>
    <string name="image_android_exercise_1">android_exercise_1</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>
    <string name="button_reset">Reset</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_new">New Timer</string>
    <string name="button_reload">Reload</string>
    <string name="button_add">+</string>
    <string name="button_subtract">-</string>
    <string name="button_choose_orientation">Device</string>
    <string name="button_copy_timer">Timers</string>
    <string name="button_finish_sound">Finish Sound</string>
    <string name="button_rest_sound">Rest Sound</string>
    <string name="title_activity_main">Timers</string>
    <string name="title_list_fragment">Timer List</string>
    <string name="title_run_clock_fragment">Run Clock</string>
    <string name="title_run_extra_fragment">Run Extra</string>
    <string name="title_edit_clock_fragment">Edit Clock</string>
    <string name="title_edit_extra_fragment">Edit Extra</string>
    <string name="title_app_options_fragment">App Options</string>

    <string-array name="sound_array">
        <item>no sound</item>
        <item>dingling</item>
        <item>deskbell</item>
        <item>ding</item>
        <item>doorbell</item>
        <item>startrek</item>
    </string-array>
    <string-array name="rest_btwn_array">
        <item>no rest</item>
        <item>5 sec</item>
        <item>10 sec</item>
        <item>15 sec</item>
        <item>20 sec</item>
        <item>30 sec</item>
        <item>45 sec</item>
        <item>60 sec</item>
    </string-array>
    <string-array name="orientation_array">
        <item>Device</item>
        <item>Landscape</item>
        <item>Portrait</item>
    </string-array>

</resources>