<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_options"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textTitleAppOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8080FF"
        android:paddingLeft="7dp"
        android:text="@string/title_app_options_fragment"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/padding_xlarge"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textOrientationAppOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/textlines"
            android:text="@string/label_orientation"
            android:textSize="@dimen/padding_xlarge" />

        <Button
            android:id="@+id/buttonOrientationAppOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_shape"
            android:minHeight="48dp"
            android:onClick="onButtonClicked"
            android:padding="10dp"
            android:text="@string/button_choose_orientation"
            android:textSize="@dimen/padding_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textFinishSoundAppOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/textlines"
            android:text="@string/label_finish_sound"
            android:textSize="@dimen/padding_xlarge" />

        <Button
            android:id="@+id/buttonFinishSoundAppOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_horizontal"
            android:background="@drawable/button_shape"
            android:minHeight="48dp"
            android:onClick="onButtonClicked"
            android:padding="10dp"
            android:text="@string/button_finish_sound"
            android:textSize="@dimen/padding_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textRestSoundAppOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/textlines"
            android:text="@string/label_rest_sound"
            android:textSize="@dimen/padding_xlarge" />

        <Button
            android:id="@+id/buttonRestSoundAppOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_shape"
            android:minHeight="48dp"
            android:onClick="onButtonClicked"
            android:padding="10dp"
            android:text="@string/button_rest_sound"
            android:textSize="@dimen/padding_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textCopyTimerAppOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/textlines"
            android:text="@string/label_copy_timer"
            android:textSize="@dimen/padding_xlarge" />

        <Button
            android:id="@+id/buttonCopyTimerAppOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_horizontal"
            android:background="@drawable/button_shape"
            android:minHeight="48dp"
            android:onClick="onButtonClicked"
            android:padding="10dp"
            android:text="@string/button_copy_timer"
            android:textSize="@dimen/padding_large" />
    </LinearLayout>

</LinearLayout>